--- a/underthetree/assets/css/style.css
+++ b/underthetree/assets/css/style.css
@@ -41,6 +41,7 @@ hr {
   display: block;
   top: 0;
   left: 50%;
+  z-index: 99;
 }
 
 .main-image {
@@ -83,6 +84,7 @@ hr {
   display: inline-block;
   padding: 7px 12px;
   margin: 0 auto;
+  margin-top: 10px;
   border: 1px solid;
   font-size: 12px;
   text-decoration: none;
@@ -188,6 +190,71 @@ h3 span {
     opacity: 0;
   }
 }
+.video-container {
+  position: relative;
+  max-width: 970px;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 0;
+  overflow: hidden;
+  opacity: 0;
+  padding-top: 20px;
+  -webkit-transition: .3s max-height linear, .3s .5s opacity;
+          transition: .3s max-height linear, .3s .5s opacity;
+}
+.video-container.open {
+  max-height: 1000px;
+  opacity: 1;
+}
+
+.close-btn {
+  width: 0;
+  height: 0;
+  border-right: 20px solid #fff0dd;
+  border-top: 20px solid transparent;
+  border-bottom: 20px solid transparent;
+  position: absolute;
+  top: calc( 50% - 20px);
+  right: 0;
+  cursor: pointer;
+}
+.close-btn:hover:after {
+  -webkit-transform: translateX(0%);
+      -ms-transform: translateX(0%);
+          transform: translateX(0%);
+}
+.close-btn:after {
+  content: 'close';
+  position: absolute;
+  background-color: #fff0dd;
+  right: -20px;
+  top: -20px;
+  padding: 0 10px;
+  height: 40px;
+  -webkit-transition: -webkit-transform 250ms;
+          transition: transform 250ms;
+  -webkit-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+          transform: translateX(100%);
+  font-size: 14px;
+  line-height: 40px;
+}
+
+.video {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.video iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 @media only screen and (max-width: 768px) {
   .section-main {
     margin-top: 45vw;
