--- a/underthetree/assets/css/style.css
+++ b/underthetree/assets/css/style.css
@@ -118,6 +118,25 @@ h3 {
 h3 span {
   font-size: .7em;
 }
+h3 a {
+  color: #4e4d4f;
+  text-decoration: none;
+  padding-right: 5px;
+  padding-left: 5px;
+  -webkit-transition: .2s;
+          transition: .2s;
+  -webkit-transform: scale(0.9, 0.9);
+      -ms-transform: scale(0.9, 0.9);
+          transform: scale(0.9, 0.9);
+  display: inline-block;
+}
+h3 a:hover {
+  -webkit-filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
+  -webkit-transform: scale(1, 1);
+      -ms-transform: scale(1, 1);
+          transform: scale(1, 1);
+}
 
 .staff {
   font-size: .9em;
